dts/testData/inspections/labelName/Invalid.dtsi
<error descr="Bad character \"#\" in label name">lab#el</error>: prop = "value";

label: prop = "value";